Fix dropdowns backdrop z-index issues (#1044)

--- a/source/content.css
+++ b/source/content.css
@@ -721,8 +721,11 @@ a.tabnav-extra[href$='mastering-markdown/'] {
 	background: rgba(0, 0, 0, 0.1);
 	animation: fade-in 0.2s;
 }
+summary.HeaderNavlink::before {
+	z-index: 30 !important; /* Bring the header backdrop above the PR bar */
+}
 :root .pagehead ul.pagehead-actions {
-	position: static; /* Demote watch/star/fork */
+	position: static; /* Watch, star, and fork buttons don‘t need a stacking context */
 }
 
 /* Reduce duplicate backdrop in PR diff view */
